Stop horizontal scrolling on mobile

--- a/resources/main.css
+++ b/resources/main.css
@@ -18,6 +18,7 @@ a:hover { text-decoration: none; }
 h1 a {
   color: black;
   text-decoration: none;
+  padding-left: 3px;
 }
 
 video {
@@ -187,7 +188,7 @@ video {
   left: 0;
   width: 100%;
   height: 26px;
-  padding: 3px 0 3px 3px;
+  padding: 3px 0 3px 0;
   border-bottom: 1px black solid;
   z-index: 3;
   background-color: white;
